--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        Homework 1
-    </body>
+<html lang="en">
+  <head>
+    <title>WDD Homework 1</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  </head>
+  <body>
+    <!-- Part 1: Website -->
+    <h1>Andrew Tran</h1>
+    <strong><em>Computer Science Major | 5th year</em></strong>
+    <p>
+      Hey! I’m Andrew, a 5th year CS major from San Jose, and I love dogs!
+      When I’m not struggling to get my life together, I enjoy playing smash, watching anime, and baking with friends.
+      If you see me on campus, let's chat!
+    </p>
+    <h3>My favorite eats in Berkeley</h3>
+    <ul>
+      <li>Sliver Pizzeria</li>
+      <li>Toss Noodle Bar</li>
+      <li>La Note</li>
+    </ul>
+    <img src="assets/img/andrew.JPG" alt="selfie" height="420" />
+    <br>
+    <a target="_blank" href="https://matias.ma/nsfw/">Trust me</a>
+    <!-- Part 2: Reading Responses -->
+    <ul>
+      <li>
+        I learned that it's possible to develop one's eye for design; 
+        previously, I had believed that certain individuals were simply born with talent in this field. 
+        I learned that one of the best ways to develop a design eye is to adapt the mindset of an existing product designer.
+      </li>
+      <li>
+        My favorite part of the article was definitely the "Breaking down the app" section.
+        Here, I was able to examine the choices that professional designers made to build components and reflect good design principles in well-known apps.
+      <li>
+        "When I started off in design, I sucked." Relatable.
+      </li>
+      <li>
+        10/10, would read again :)
+      </li>
+    </ul>
+  </body>
 </html>
