--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        Lab 1
-    </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WDD Lab 7</title>
+</head>
+<body>
+  <h1>Fake News</h1>
+  <a href="https://nytimes.wd5.myworkdayjobs.com/Tech" target="_blank">https://nytimes.wd5.myworkdayjobs.com/Tech</a>
+  <p>nyt-cheltenham,georgia,'times new roman',times,serif</p>
+  <img src="assets/img/submission1.png" height="400px" width="720px"/>
+  <h1>Magic Number</h1>
+  <img src="assets/img/submission2.png" height="400px" width="650px"/>
+</body>
 </html>
