quality of life changes for hw8

--- a/homeworks/hw8/index.html
+++ b/homeworks/hw8/index.html
@@ -26,7 +26,7 @@
 				<div class="song-artist">Forrest.</div>
 			</li>
 		</ul>
-		<ul id="songs-second-half">
+		<ul id="songs-second-half" class="hidden">
 			<li>
 				<div class="song-title">Why</div>
 				<div class="song-artist">Dominic Fike</div>
