uploaded final project

--- a/final/about.html
+++ b/final/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/about.css">
   <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_io/favicon-32x32.png">
@@ -11,7 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Andrew Tran">
-  <title>andrew tran</title>
+  <title>who am i?</title>
 </head>
 <body>
   <nav id="topnav">
@@ -71,24 +71,21 @@
       </section>
     </div>
   </nav>
-  <main id="work">
-    <div class="grid-container">
-        <div class="grid-item">
-          <a href="https://humaninterest.com/about-us/" target="_blank"><img class="tile" src="assets/img/humaninterest.png" alt="Human Interest" /></a>
-          <p class="caption"></p>
-        </div>
-        <div class="grid-item">
-          <a href="https://zenuriken.itch.io/bears-bobaria" target="_blank"><img class="tile" src="assets/img/bearsbobaria.png" alt="Bear's Bobaria" /></a>
-          <p class="caption"></p>
-        </div>
-        <div class="grid-item">
-          <a href="https://twitter.com/dailycolorbot" target="_blank"><img class="tile" src="assets/img/colorbot.png" alt="COLOR BOT" /></a>
-          <p class="caption"></p>
-        </div>
-        <div class="grid-item">
-          <a href="https://docs.google.com/presentation/d/1ssKuBE0oTCIqgxnB_IlMD9C7vjYhm2fhr14dQ1riijo/edit?usp=sharing" target="_blank"><img class="tile" src="assets/img/commute.png" alt="commute." /></a>
-          <p class="caption"></p>
-        </div>
+  <main id="about">
+    <img id="me" src="assets/img/andrewtran.jpg" alt="It's me!" >
+    <div class="bio">
+      <h1 id="greeting">Nice to meet you!</h1>
+      <br>
+      <p>
+        I'm Andrew, a senior at UC Berkeley currently pursuing his B.A. Computer Science.
+        I was introduced to the wonders of programming in high school, and I've never looked back since!
+      </p>
+      <br>
+      <p>
+        As a full stack developer in an era where information is advancing at an unprecedented rate,
+        I constantly strive to implement avenues for continued learning of such new technologies.
+        I believe it is my responsibility as an engineer to leverage my craft to create a more sustainable future for all.
+      </p>
     </div>
   </main>
   <script src="assets/script/script.js"></script>
